--- a/lyrics.html
+++ b/lyrics.html
@@ -135,7 +135,7 @@
     let video;
 
     function preload() {
-      video = createVideo('lyricvideo_7.mp4'); // Replace 'lyricvideo_1.mp4' with your video file
+      video = createVideo('lyricvideo_7-2.mp4'); // Replace 'lyricvideo_1.mp4' with your video file
     }
 
     function setup() {
